# ndarrow

./: .gitignore  .justfile  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  RELEASE_NOTES.md  cliff.toml  clippy.toml
.github/workflows/: ci.yml  pr.yml  release.yml  security.yml
crates/ndarrow/: Cargo.toml
crates/ndarrow/benches/: inbound_benchmarks.rs  outbound_benchmarks.rs
crates/ndarrow/examples/: basic_conversion.rs  matrix_roundtrip.rs  null_handling.rs
crates/ndarrow/src/: complex.rs  element.rs  error.rs  helpers.rs  inbound.rs  lib.rs  outbound.rs  prelude.rs  sparse.rs  tensor.rs
crates/ndarrow/tests/: null_handling.rs  roundtrip.rs  zero_copy.rs
docs/: CAPABILITY_MATRIX.md  DECISIONS.md  EXECUTION_TRACKER.md  NABLED_CHANGES.md  PERFORMANCE_CONTRACTS.md  README.md  ROADMAP.md  STATUS.md  architecture.md
src/: conversions.rs  dense.rs  error.rs  lib.rs  ops.rs  scalar.rs
src/conversions/: nalgebra_conv.rs  ndarray_conv.rs
src/ops/: arithmetic.rs  similarity.rs
tests/: integration_test.rs
