[package]
name = "narrow"
version = "0.1.0"
edition = "2021"
authors = ["George Lee Patterson <patterson.george@gmail.com>"]
description = "Linear algebra for Arrow data"
license = "Apache-2.0"
keywords = ["arrow", "linear-algebra", "nalgebra", "math", "vector"]
categories = ["mathematics"]
repository = "https://github.com/georgeleepatterson/narrow"
homepage = "https://github.com/georgeleepatterson/narrow"
documentation = "https://docs.rs/narrow"

[dependencies]
arrow = "53"
ndarray = "0.16"
nalgebra = "0.33"
thiserror = "2.0"

[dev-dependencies]
approx = "0.5"

[profile.ci]
inherits = "dev"
debug = "line-tables-only"
incremental = false
